common/force-app/main/default/objects/Opportunity/fields/Products_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Products_Interested_In__c</fullName>
    <label>Products Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Investing</fullName>
            </value>
            <value>
                <fullName>Listing a Property</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Private Syndicate Platform (PSP)</fullName>
            </value>
            <value>
                <fullName>Property Equity</fullName>
            </value>
            <value>
                <fullName>Property Sales</fullName>
            </value>
            <value>
                <fullName>Raising Capital</fullName>
            </value>
            <value>
                <fullName>Venture Capital Investing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>