common/force-app/main/default/objects/Opportunity/fields/Projected_Revenue_Low__c.field-meta.xml
<CustomField>
    <fullName>Projected_Revenue_Low__c</fullName>
    <label>Projected Revenue Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>