common/force-app/main/default/objects/Opportunity/fields/PSP_Amount_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>PSP_Amount_Shortfall__c</fullName>
    <formula>PSP_Total_payment__c -  Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP Amount Shortfall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>