common/force-app/main/default/objects/Opportunity/fields/PSP_Investment_Contract__c.field-meta.xml
<CustomField>
    <fullName>PSP_Investment_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick to generate PSP investment contract</description>
    <inlineHelpText>Tick to generate PSP investment contract</inlineHelpText>
    <label>PSP Investment Contract</label>
    <type>Checkbox</type>
</CustomField>