common/force-app/main/default/objects/Opportunity/fields/PSP_Only_Fee__c.field-meta.xml
<CustomField>
    <fullName>PSP_Only_Fee__c</fullName>
    <formula>Annual_Fee__c +  Establishment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP Only Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>