common/force-app/main/default/objects/Opportunity/fields/PSP_Payment_Email__c.field-meta.xml
<CustomField>
    <fullName>PSP_Payment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSP Payment Email</label>
    <type>Checkbox</type>
</CustomField>