common/force-app/main/default/objects/Opportunity/fields/PSP_Total_payment__c.field-meta.xml
<CustomField>
    <fullName>PSP_Total_payment__c</fullName>
    <formula>Total_Product_Price__c +  PSP_Only_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP Total payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>