common/force-app/main/default/objects/Opportunity/fields/PSP_Total_payment_amount_due__c.field-meta.xml
<CustomField>
    <fullName>PSP_Total_payment_amount_due__c</fullName>
    <formula>PSPVentureCrowd_fee__c  +  Total_Product_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP Total payment amount due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>