common/force-app/main/default/objects/Opportunity/fields/PSPVentureCrowd_fee__c.field-meta.xml
<CustomField>
    <fullName>PSPVentureCrowd_fee__c</fullName>
    <label>PSP Only VentureCrowd fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>