common/force-app/main/default/objects/Opportunity/fields/Raise__c.field-meta.xml
<CustomField>
    <fullName>Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>