common/force-app/main/default/objects/Opportunity/fields/Read_and_Agree_Crowd_Sourced_Funding__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Agree_Crowd_Sourced_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Agree Crowd Sourced Funding</label>
    <type>Checkbox</type>
</CustomField>