common/force-app/main/default/objects/Opportunity/fields/Read_and_Agree_CSF_Risk_Warning__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Agree_CSF_Risk_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Agree CSF_Risk_Warning</label>
    <type>Checkbox</type>
</CustomField>