common/force-app/main/default/objects/Opportunity/fields/Read_and_Agree_Financial_Services_Guide__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Agree_Financial_Services_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Agree Financial Services Guide</label>
    <type>Checkbox</type>
</CustomField>