common/force-app/main/default/objects/Opportunity/fields/Read_and_Agree_General_Warning_Statement__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Agree_General_Warning_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Agree General Warning Statement</label>
    <type>Checkbox</type>
</CustomField>