common/force-app/main/default/objects/Opportunity/fields/Read_and_Agree_Investment_Contract__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Agree_Investment_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Agree Investment Contract</label>
    <type>Checkbox</type>
</CustomField>