common/force-app/main/default/objects/Opportunity/fields/Read_and_Agree_Prospectus_Document__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Agree_Prospectus_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Agree Prospectus Document</label>
    <type>Checkbox</type>
</CustomField>