common/force-app/main/default/objects/Opportunity/fields/Reason_for_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Enquiry__c</fullName>
    <label>Reason for Enquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupier</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>First Home Buyer</fullName>
            </value>
            <value>
                <fullName>2nd Home Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>