common/force-app/main/default/objects/Opportunity/fields/Receipt_Issued__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Issued__c</fullName>
    <label>Receipt Issued</label>
    <type>Date</type>
</CustomField>