common/force-app/main/default/objects/Opportunity/fields/Receipt_Temp__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Temp</label>
    <type>Checkbox</type>
</CustomField>