common/force-app/main/default/objects/Opportunity/fields/Recommend_Score__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Score__c</fullName>
    <label>Recommend_Score</label>
    <type>TextArea</type>
</CustomField>