common/force-app/main/default/objects/Opportunity/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <formula>IF(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    IMAGE(&quot;/resource/GreenFlag&quot;, &quot;Green Flag&quot;, 20, 20),
    IF(
        (TODAY() - DATEVALUE(LastModifiedDate) &gt; 14) || (TODAY() -  LastActivityDate  &gt; 14),
        IMAGE(&quot;/resource/RedFlag&quot;, &quot;Red Flag&quot;, 20, 20), 
        IMAGE(&quot;/resource/GreenFlag&quot;, &quot;Green Flag&quot;, 20, 20)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If you see a green flag, it means there has been activity on the account in the last 14 days, if there hasn&apos;t been any activity then you&apos;ll see a red flag, if it is past due date, then you will see a warning sign</inlineHelpText>
    <label>Record Status</label>
    <type>Text</type>
</CustomField>