common/force-app/main/default/objects/Opportunity/fields/Redemption_payment_date__c.field-meta.xml
<CustomField>
    <fullName>Redemption_payment_date__c</fullName>
    <label>Redemption payment date</label>
    <type>Date</type>
</CustomField>