common/force-app/main/default/objects/Opportunity/fields/Redemption_Request__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redemption Request</label>
    <type>Checkbox</type>
</CustomField>