common/force-app/main/default/objects/Opportunity/fields/Referral_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Agreement</label>
    <referenceTo>Referral_Application__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>