common/force-app/main/default/objects/Opportunity/fields/Referral_Agreement_Application__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agreement_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Agreement Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>