common/force-app/main/default/objects/Opportunity/fields/Referral_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agreement_End_Date__c</fullName>
    <formula>ADDMONTHS( Account.Date_of_first_Investment__c, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Agreement End Date</label>
    <type>Date</type>
</CustomField>