common/force-app/main/default/objects/Opportunity/fields/Referral_Commission__c.field-meta.xml
<CustomField>
    <fullName>Referral_Commission__c</fullName>
    <label>Referral Commission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>