common/force-app/main/default/objects/Opportunity/fields/Referral_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Commission_Amount__c</fullName>
    <formula>Unit_Certificate_Amount__c   *  Referral_Commission__c</formula>
    <label>Referral Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>