common/force-app/main/default/objects/Opportunity/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <formula>Invested_Product_ADMIN_FIELD__r.Masterplan__r.Registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>