common/force-app/main/default/objects/Opportunity/fields/Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name__c</fullName>
    <formula>Account.FirstName&amp;&quot; &quot;&amp;Account.LastName &amp; Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>