common/force-app/main/default/objects/Opportunity/fields/Related_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_First_Name__c</fullName>
    <formula>Primary_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact First Name</label>
    <type>Text</type>
</CustomField>