common/force-app/main/default/objects/Opportunity/fields/Related_contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_contact_ID__c</fullName>
    <formula>Primary_Contact__r.Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related contact ID</label>
    <type>Text</type>
</CustomField>