common/force-app/main/default/objects/Opportunity/fields/Related_contact_last_name__c.field-meta.xml
<CustomField>
    <fullName>Related_contact_last_name__c</fullName>
    <formula>Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related contact last name</label>
    <type>Text</type>
</CustomField>