common/force-app/main/default/objects/Opportunity/fields/Related_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Code__c</fullName>
    <label>Related Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>