common/force-app/main/default/objects/Opportunity/fields/Req_to_Invest_Under_Different_Account__c.field-meta.xml
<CustomField>
    <fullName>Req_to_Invest_Under_Different_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updated from Invest Now form. When investor prefers to invest under different account</description>
    <inlineHelpText>updated from Invest Now form. When investor prefers to invest under different account</inlineHelpText>
    <label>Req to Invest Under Different Account</label>
    <type>Checkbox</type>
</CustomField>