common/force-app/main/default/objects/Opportunity/fields/Rollover_Investment__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Investment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is rolling over from one product to another</inlineHelpText>
    <label>Rollover Investment</label>
    <type>Checkbox</type>
</CustomField>