common/force-app/main/default/objects/Opportunity/fields/Safe_Gauge_Contract__c.field-meta.xml
<CustomField>
    <fullName>Safe_Gauge_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe Gauge Contract</label>
    <type>Checkbox</type>
</CustomField>