common/force-app/main/default/objects/Opportunity/fields/Sales_commission_rate__c.field-meta.xml
<CustomField>
    <fullName>Sales_commission_rate__c</fullName>
    <formula>Sales_Representative__r.Property_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD)Sales commission rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>