common/force-app/main/default/objects/Opportunity/fields/Sales_commission_rate_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_commission_rate_c__c</fullName>
    <label>Sales commission rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>