common/force-app/main/default/objects/Opportunity/fields/Sales_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract__c</fullName>
    <label>Sales Contract</label>
    <type>Url</type>
</CustomField>