common/force-app/main/default/objects/Opportunity/fields/Sales_rep_amount_at_Unconditional_Paid__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep_amount_at_Unconditional_Paid__c</fullName>
    <label>Sales rep amount at Unconditional Paid</label>
    <type>Date</type>
</CustomField>