common/force-app/main/default/objects/Opportunity/fields/Sales_rep_commission_at_Unconditional__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep_commission_at_Unconditional__c</fullName>
    <formula>Total_sales_rep_commission_n__c  *  Unconditional_Sales_Commission_Payable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales rep commission at Unconditional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>