common/force-app/main/default/objects/Opportunity/fields/Sales_rep_commission_balance_approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep_commission_balance_approved__c</fullName>
    <label>Sales rep commission at settlement paid</label>
    <type>Date</type>
</CustomField>