common/force-app/main/default/objects/Opportunity/fields/Sales_rep_commission_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep_commission_to_be_paid__c</fullName>
    <label>Sales rep commission to be paid</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>