common/force-app/main/default/objects/Opportunity/fields/Sales_Rep_payment_structure__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_payment_structure__c</fullName>
    <label>Sales Rep payment structure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>