common/force-app/main/default/objects/Opportunity/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The sales agent selling this property.</inlineHelpText>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>