common/force-app/main/default/objects/Opportunity/fields/Sales_Settlement_Commission_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Settlement_Commission_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Settlement Commission Approved</label>
    <type>Checkbox</type>
</CustomField>