common/force-app/main/default/objects/Opportunity/fields/Sales_Unconditional_Commission_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unconditional_Commission_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Unconditional Commission Approved</label>
    <type>Checkbox</type>
</CustomField>