common/force-app/main/default/objects/Opportunity/fields/Salesforce_Owner__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesoNZT</relationshipName>
    <type>Lookup</type>
</CustomField>