common/force-app/main/default/objects/Opportunity/fields/Selling_agency__c.field-meta.xml
<CustomField>
    <fullName>Selling_agency__c</fullName>
    <label>Selling agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VCPP</fullName>
            </value>
            <value>
                <fullName>HomeCorp</fullName>
            </value>
            <value>
                <fullName>Colin Moore</fullName>
            </value>
            <value>
                <fullName>LJ Hooker Aspley</fullName>
            </value>
            <value>
                <fullName>LJ Hooker Gold Coast</fullName>
            </value>
            <value>
                <fullName>Colliers Toowoomba</fullName>
            </value>
            <value>
                <fullName>Pascal Pierre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>