common/force-app/main/default/objects/Opportunity/fields/Send_App_Receipt_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_App_Receipt_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>trigger to send the email to investor</inlineHelpText>
    <label>Send App Receipt Email</label>
    <type>Checkbox</type>
</CustomField>