common/force-app/main/default/objects/Opportunity/fields/Send_Marketing_expectations_email__c.field-meta.xml
<CustomField>
    <fullName>Send_Marketing_expectations_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Playbook email sent</label>
    <type>Checkbox</type>
</CustomField>