common/force-app/main/default/objects/Opportunity/fields/Send_Unit_Cert_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Unit_Cert_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox is used to trigger the email with unit cert details</description>
    <label>Send Unit Cert Email</label>
    <type>Checkbox</type>
</CustomField>