common/force-app/main/default/objects/Opportunity/fields/Sent_Verify_ID_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Verify_ID_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this is auto checked when the un verified invertor submits the invest application.</inlineHelpText>
    <label>Sent Verify ID Email</label>
    <type>Checkbox</type>
</CustomField>