common/force-app/main/default/objects/Opportunity/fields/Settlement_Booked__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Booked__c</fullName>
    <inlineHelpText>The date &amp; time that settlement is booked for</inlineHelpText>
    <label>Settlement Booked</label>
    <type>DateTime</type>
</CustomField>