common/force-app/main/default/objects/Opportunity/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <inlineHelpText>The date settlement occured.</inlineHelpText>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>