common/force-app/main/default/objects/Opportunity/fields/Settlement_statement__c.field-meta.xml
<CustomField>
    <fullName>Settlement_statement__c</fullName>
    <inlineHelpText>Please add the public URL of the settlement statement here after uploading it to the related opportunity.</inlineHelpText>
    <label>Settlement statement</label>
    <type>Url</type>
</CustomField>