common/force-app/main/default/objects/Opportunity/fields/Step_History__c.field-meta.xml
<CustomField>
    <fullName>Step_History__c</fullName>
    <label>Step History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>