common/force-app/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer Doc sent</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>Offer Approved</fullName>
            </value>
            <value>
                <fullName>EOI Sent</fullName>
            </value>
            <value>
                <fullName>EOI Received</fullName>
            </value>
            <value>
                <fullName>Contract Issued</fullName>
            </value>
            <value>
                <fullName>Contract signed by Buyer</fullName>
            </value>
            <value>
                <fullName>Contract Executed</fullName>
                <label>Contract Executed (Conditional)</label>
            </value>
            <value>
                <fullName>Contract Unconditional</fullName>
                <label>Contract Executed (Unconditional)</label>
            </value>
            <value>
                <fullName>Awaiting Settlement</fullName>
                <isActive>false</isActive>
                <label>Awaiting Settlement</label>
            </value>
            <value>
                <fullName>Contract Pending</fullName>
                <isActive>false</isActive>
                <label>Contract Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>