common/force-app/main/default/objects/Opportunity/fields/TempStage__c.field-meta.xml
<CustomField>
    <fullName>TempStage__c</fullName>
    <formula>TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TempStage</label>
    <type>Text</type>
</CustomField>