common/force-app/main/default/objects/Opportunity/fields/Time_Trigger_01__c.field-meta.xml
<CustomField>
    <fullName>Time_Trigger_01__c</fullName>
    <description>this field is utilised in Process Builder to trigger after 1 min</description>
    <formula>now() - 0.04097222222</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this field is utilised in Process Builder to trigger after 1 min</inlineHelpText>
    <label>Time Trigger_01 ADMIN</label>
    <type>DateTime</type>
</CustomField>