common/force-app/main/default/objects/Opportunity/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <formula>CM_Eligible_Commission__c +  CRC_Eligible_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of CM &amp; CRC Commission</inlineHelpText>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>