common/force-app/main/default/objects/Opportunity/fields/Total_Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Paid__c</fullName>
    <formula>Initial_Deposit_Amount__c +  Balance_of_Deposit_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount of deposit paid.</inlineHelpText>
    <label>Total Deposit Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>