common/force-app/main/default/objects/Opportunity/fields/Total_deposit_paid_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_deposit_paid_Percent__c</fullName>
    <formula>Total_Deposit_Paid__c  /  Total_Product_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total deposit paid (Percent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>