common/force-app/main/default/objects/Opportunity/fields/Total_Payable_including_Related_Donation__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_including_Related_Donation__c</fullName>
    <formula>Amount +  Donation_Amount__c +  Contribution_Fee_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable including Related/Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>