common/force-app/main/default/objects/Opportunity/fields/Total_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Price__c</fullName>
    <label>Total Product Price</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>