common/force-app/main/default/objects/Opportunity/fields/Total_Redeemed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Redeemed_Amount__c</fullName>
    <label>Total Redeemed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>