common/force-app/main/default/objects/Opportunity/fields/Total_Redeemed_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Redeemed_Units__c</fullName>
    <label>Total Redeemed Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>