common/force-app/main/default/objects/Opportunity/fields/Total_sales_rep_commission__c.field-meta.xml
<CustomField>
    <fullName>Total_sales_rep_commission__c</fullName>
    <formula>Sales_commission_rate__c  *  Total_Product_Price__c</formula>
    <label>(OLD)Total sales rep commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>