common/force-app/main/default/objects/Opportunity/fields/Total_sales_rep_commission_n__c.field-meta.xml
<CustomField>
    <fullName>Total_sales_rep_commission_n__c</fullName>
    <label>Total sales rep commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>