common/force-app/main/default/objects/Opportunity/fields/Total_sales_rep_commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_sales_rep_commission_Paid__c</fullName>
    <label>Total sales rep commission Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>