common/force-app/main/default/objects/Opportunity/fields/TSF_Donation_email_sent__c.field-meta.xml
<CustomField>
    <fullName>TSF_Donation_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box is used to trigger TSF first email and second email. Please review TSF AR process for details.</description>
    <inlineHelpText>Check box is used to trigger TSF first email and second email. Please review TSF AR process for details.</inlineHelpText>
    <label>TSF Email Trigger ADMIN ONLY</label>
    <type>Checkbox</type>
</CustomField>