common/force-app/main/default/objects/Opportunity/fields/TSF_Donation_Receipt__c.field-meta.xml
<CustomField>
    <fullName>TSF_Donation_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSF Donation Receipt</label>
    <type>Checkbox</type>
</CustomField>