common/force-app/main/default/objects/Opportunity/fields/TSF_Receipt_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>TSF_Receipt_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSF Receipt Email Sent</label>
    <type>Checkbox</type>
</CustomField>