common/force-app/main/default/objects/Opportunity/fields/Unconditional_commission_approved__c.field-meta.xml
<CustomField>
    <fullName>Unconditional_commission_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Split % Approved</label>
    <type>Checkbox</type>
</CustomField>